<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#FBFBFB">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#231F20"
        android:backgroundTint="#231F20"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:orientation="vertical"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.117"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">













            <TextView
                android:layout_width="match_parent"
                android:layout_height="147dp"
                android:fontFamily="cursive"
                android:paddingLeft="8dp"
                android:text="@string/activity"
                android:textAlignment="center"
                android:textColor="#ffffff"
                android:textSize="34sp"
                android:textStyle="bold|italic" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="282dp"

                android:fontFamily="sans-serif-condensed-medium"
                android:paddingLeft="8dp"
                android:text="@string/activity_details"
                android:textAlignment="center"
                android:textColor="#FFBA5F"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="53dp"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="sans-serif-black"
                android:foreground="?attr/selectableItemBackground"
                android:onClick="familyActivity"
                android:paddingLeft="8dp"
                android:text="@string/more_details"
                android:textAlignment="center"
                android:textColor="#ffffff"
                android:textSize="20sp" />


            <Button
                android:layout_width="190dp"
                android:layout_height="62dp"
                android:layout_marginStart="105dp"
                android:backgroundTint="#090709"
                android:ellipsize="end"
                android:fontFamily="sans-serif-black"
                android:foregroundTint="#F1EBEB"
                android:onClick="ReservePage"
                android:text="@string/book"
                android:textColor="#FFBA5F"
                android:textSize="16sp" />


        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>