<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#231F20"
        android:backgroundTint="#231F20"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="355dp"
            android:layout_height="86dp"
            android:layout_margin="8dp"
            android:text="@string/check_subscription"
            android:textAlignment="center"
            android:textColor="#FFBA5F"
            android:textSize="26sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="355dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/dialog_email"
            android:textAlignment="viewStart"
            android:textColor="#ffffff"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextEmailCheck"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginTop="20dp"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <Button
            android:id="@+id/buttonCheckSubscription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="65dp"
            android:layout_marginTop="20dp"
            android:onClick="check"
            android:text="Check Subscription"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
        android:scaleType="fitCenter"
        android:visibility="visible"
        android:alpha="0.1"
        app:srcCompat="@drawable/watermark" />



    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>