<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A5A4A4"
    android:backgroundTint="#A5A4A4">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#FAF6F6"
        android:backgroundTint="#FAF6F6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="390dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.117"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/restaurant"
                android:textAlignment="center"
                android:textColor="#034287"
                android:textSize="24sp"
                android:textStyle="bold|italic" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:background="#231F20"
                android:backgroundTint="#231F20"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="200dp"
                    android:layout_height="330dp"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:text="@string/breakfast"
                    android:textAlignment="center"
                    android:textColor="#ffffff"
                    android:textSize="14sp"
                    android:textStyle="italic" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="188dp"
                    android:layout_height="242dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/weekend" />
            </LinearLayout>

            <TextView
                android:id="@+id/textViewLunch"
                android:layout_width="match_parent"
                android:layout_height="66dp"
                android:text="@string/Family"
                android:textAlignment="center"
                android:textColor="#034287"
                android:textSize="24sp"
                android:textStyle="bold|italic" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="239dp"
                android:background="#FBFBFB"
                android:backgroundTint="#FBFBFB"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageViewLunch"
                    android:layout_width="wrap_content"
                    android:layout_height="187dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/family" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="330dp"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:text="@string/Lunch_detail"
                    android:textAlignment="center"
                    android:textColor="#090707"
                    android:textSize="11.5sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/textViewEvening"
                android:layout_width="match_parent"
                android:layout_height="63dp"
                android:text="@string/Eve"
                android:textAlignment="viewStart"
                android:textColor="#034287"
                android:textSize="24sp"
                android:textStyle="bold|italic" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="329dp"
                android:layout_marginEnd="2dp"
                android:layout_marginBottom="16dp"
                android:background="#231F20"
                android:backgroundTint="#231F20"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewEve"
                    android:layout_width="245dp"
                    android:layout_height="330dp"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:text="@string/Eve_details"
                    android:textAlignment="center"
                    android:textColor="#ffffff"
                    android:textSize="13sp"
                    android:textStyle="italic" />

                <ImageView
                    android:id="@+id/imageViewEve"
                    android:layout_width="188dp"
                    android:layout_height="242dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/couple" />
            </LinearLayout>



        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>